@@ -65,6 +65,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #6121: pydoc now ignores leading and trailing spaces in the
+  argument to the 'help' function.
+
 - Issue #6050: Don't fail extracting a directory from a zipfile if
   the directory already exists.
 
